Ensures quality overlay doesn't go behind map attribution.

--- a/css/theme-bootstrap-3.css
+++ b/css/theme-bootstrap-3.css
@@ -425,7 +425,7 @@ input:checked + .slider:before {
   border: solid silver 1px;
   border-radius: 4px;
   background: white;
-  z-index: 1000;
+  z-index: 9999;
   position: absolute;
   padding: 8px;
   /* Include/Exclude inline */
