--- a/scss/common/_report-filters.scss
+++ b/scss/common/_report-filters.scss
@@ -168,7 +168,7 @@
     border: solid silver 1px;
     border-radius: 4px;
     background: white;
-    z-index: 1000;
+    z-index: 9999;
     position: absolute;
     padding: 8px;
     /* Include/Exclude inline */
